force-app/main/default/objects/Elixir_Custom_Setting__c/Elixir_Custom_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Elixir Custom Setting</label>
</CustomObject>