force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Add_Modifiers_Feature__c.field-meta.xml
<CustomField>
    <fullName>Add_Modifiers_Feature__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add Modifiers Feature</label>
    <type>Checkbox</type>
</CustomField>