force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Allergies_Medical_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Medical_Alerts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allergies/Medical Alerts</label>
    <type>Checkbox</type>
</CustomField>