force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Allergy_Columns__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Columns__c</fullName>
    <description>To configure the Allergy columns in the forms</description>
    <label>Allergy Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>