force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Allow_Patient_Diagnosis_On_RCM_Proceduer__c.field-meta.xml
<CustomField>
    <fullName>Allow_Patient_Diagnosis_On_RCM_Proceduer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field allow to Template Diagnosis on RCM procedure screen</description>
    <label>Enable Template Diagnosis search in RCM</label>
    <type>Checkbox</type>
</CustomField>