force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Appointment_Interval__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Interval__c</fullName>
    <label>Appointment Interval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>