force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Appointment_Max_Search__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Max_Search__c</fullName>
    <label>Appointment_Max_Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>