force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Appointment_Notification_Queue__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Notification_Queue__c</fullName>
    <label>Appointment Notification Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>