force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Appointment_s_Slot_Interval__c.field-meta.xml
<CustomField>
    <fullName>Appointment_s_Slot_Interval__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Minutes entered here define the difference between the slots on the appointment screen.</description>
    <label>Appointment&apos;s Slot Interval (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>