force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Business_Account_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Recordtype__c</fullName>
    <defaultValue>&apos;Business_Account&apos;</defaultValue>
    <description>To define project level business record type</description>
    <label>Business Account Recordtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>