force-app/main/default/objects/Elixir_Custom_Setting__c/fields/By_Pass_Claim_Name__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Claim_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checkbox marked as TRUE , then sending ClaimName+OrgId and if false sending claimName only to claimMD</description>
    <inlineHelpText>If TRUE sending Claim Name plus Org Id</inlineHelpText>
    <label>By Pass Claim Name</label>
    <type>Checkbox</type>
</CustomField>