force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Care_Episode_based_filtering_for_Notes__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode_based_filtering_for_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Episode based filtering for Notes</label>
    <type>Checkbox</type>
</CustomField>