force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Care_Episode_Columns__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode_Columns__c</fullName>
    <label>Care Episode Columns</label>
    <type>TextArea</type>
</CustomField>