force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Care_episode_location_mandatory__c.field-meta.xml
<CustomField>
    <fullName>Care_episode_location_mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care episode location mandatory</label>
    <type>Checkbox</type>
</CustomField>