force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Care_Episode_Update_on_Medical_Coding__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode_Update_on_Medical_Coding__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Care Episode Update on Medical Coding</label>
    <type>Checkbox</type>
</CustomField>