force-app/main/default/objects/Elixir_Custom_Setting__c/fields/CareEpisode__c.field-meta.xml
<CustomField>
    <fullName>CareEpisode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CareEpisodePrompt</label>
    <type>Checkbox</type>
</CustomField>