force-app/main/default/objects/Elixir_Custom_Setting__c/fields/CarePlan_Columns__c.field-meta.xml
<CustomField>
    <fullName>CarePlan_Columns__c</fullName>
    <label>CarePlan Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>