force-app/main/default/objects/Elixir_Custom_Setting__c/fields/ClaimLineItemTrigger_Active__c.field-meta.xml
<CustomField>
    <fullName>ClaimLineItemTrigger_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using this checkbox to activate updateReconciliationSummaryOnClaims trigger.</description>
    <label>ClaimLineItemTrigger Active</label>
    <type>Checkbox</type>
</CustomField>