force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Common_message_utility__c.field-meta.xml
<CustomField>
    <fullName>Common_message_utility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common message utility</label>
    <type>Checkbox</type>
</CustomField>