force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Contact_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Contact_RecordType__c</fullName>
    <defaultValue>&apos;Contact&apos;</defaultValue>
    <description>This will be used to store record type, which will be used for contact.</description>
    <label>Contact RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>