force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Create_Claim_For_Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Create_Claim_For_Care_Episode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Claim For Care Episode</label>
    <type>Checkbox</type>
</CustomField>