force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Create_Procedures_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Create_Procedures_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be checked to create procedures automatically</description>
    <label>Create Procedures Automatically</label>
    <type>Checkbox</type>
</CustomField>