force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Default_Active_Care_Episode_Filter__c.field-meta.xml
<CustomField>
    <fullName>Default_Active_Care_Episode_Filter__c</fullName>
    <defaultValue>&apos;createddate desc&apos;</defaultValue>
    <description>This field will apply filter when we are fetching the related active care episodes for a patient.</description>
    <label>Default Active Care Episode Filter</label>
    <type>TextArea</type>
</CustomField>