force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Default_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checks if pricing (actual price) has to be configured via product on procedure creation</description>
    <label>Default Pricing</label>
    <type>Checkbox</type>
</CustomField>