force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Default_Reservation_Start_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Default_Reservation_Start_Minutes__c</fullName>
    <label>Default Reservation Start (Minutes)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>