force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnosis Code</label>
    <type>Checkbox</type>
</CustomField>