force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Diagnosis_Column__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Column__c</fullName>
    <description>This field is used to store the selected columns on the dualListbox of ElixirOEM_DiagnosisColumnsConfigurable.</description>
    <label>Diagnosis Column</label>
    <type>TextArea</type>
</CustomField>