force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Disable_Messaging_buttons_from_portal__c.field-meta.xml
<CustomField>
    <fullName>Disable_Messaging_buttons_from_portal__c</fullName>
    <description>This field is used to determine whether the buttons should be visible to the portal user or not.</description>
    <inlineHelpText>Enter features separated by semicolons e.g. New; Bookmark; Archive; Delete</inlineHelpText>
    <label>Disable Messaging buttons from portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>