force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Disable_patient_messages_from_portal__c.field-meta.xml
<CustomField>
    <fullName>Disable_patient_messages_from_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable patient messages from portal</label>
    <type>Checkbox</type>
</CustomField>