force-app/main/default/objects/Elixir_Custom_Setting__c/fields/EditPresColumn__c.field-meta.xml
<CustomField>
    <fullName>EditPresColumn__c</fullName>
    <label>EditPresColumn</label>
    <type>TextArea</type>
</CustomField>