force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Elixir_Payment__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Payment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this custom setting is enabled, then on clicking &apos;collect payment &quot; button the old payment screen should open up.</description>
    <label>Elixir Payment</label>
    <type>Checkbox</type>
</CustomField>