force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Elixir_portal_url__c.field-meta.xml
<CustomField>
    <fullName>Elixir_portal_url__c</fullName>
    <label>Elixir portal url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>