force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Enable_email_for_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Enable_email_for_Approvers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable email for Approvers</label>
    <type>Checkbox</type>
</CustomField>