force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Enable_Multiple_Active_Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Enable_Multiple_Active_Care_Episode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is true then we can have multiple active care episodes for a patient at a time and if this field is false then we can have only one active care episode at a time</description>
    <label>Enable Multiple Active Care Episode</label>
    <type>Checkbox</type>
</CustomField>