force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Enable_portal_in_Elixir__c.field-meta.xml
<CustomField>
    <fullName>Enable_portal_in_Elixir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable portal in Elixir</label>
    <type>Checkbox</type>
</CustomField>