force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Enable_Send_Forms_To_Portal__c.field-meta.xml
<CustomField>
    <fullName>Enable_Send_Forms_To_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Send Forms To Portal</label>
    <type>Checkbox</type>
</CustomField>