force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Enable_Tasks_for_approvers__c.field-meta.xml
<CustomField>
    <fullName>Enable_Tasks_for_approvers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Tasks for approvers</label>
    <type>Checkbox</type>
</CustomField>