force-app/main/default/objects/Elixir_Custom_Setting__c/fields/ePrescription_Columns__c.field-meta.xml
<CustomField>
    <fullName>ePrescription_Columns__c</fullName>
    <description>This field is used to store the columns for managing in the e prescription list view.</description>
    <label>ePrescription Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>