force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Form_Label__c.field-meta.xml
<CustomField>
    <fullName>Form_Label__c</fullName>
    <label>Form Label</label>
    <type>TextArea</type>
</CustomField>