force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Form_reminder_Interval__c.field-meta.xml
<CustomField>
    <fullName>Form_reminder_Interval__c</fullName>
    <label>Form reminder Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>