force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Forms_Columns__c.field-meta.xml
<CustomField>
    <fullName>Forms_Columns__c</fullName>
    <label>Forms Columns</label>
    <type>TextArea</type>
</CustomField>