force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Historical_Procedure_Columns__c.field-meta.xml
<CustomField>
    <fullName>Historical_Procedure_Columns__c</fullName>
    <label>Historical Procedure Columns</label>
    <type>TextArea</type>
</CustomField>