force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Historical_Vitals__c.field-meta.xml
<CustomField>
    <fullName>Historical_Vitals__c</fullName>
    <description>This field is used to control the limit of the vitals data on the form.</description>
    <label>Historical Vitals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>