force-app/main/default/objects/Elixir_Custom_Setting__c/fields/In_Process_Procedure_Columns__c.field-meta.xml
<CustomField>
    <fullName>In_Process_Procedure_Columns__c</fullName>
    <label>In Process Procedure Columns</label>
    <type>TextArea</type>
</CustomField>