force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Include_CMS1500_Form__c.field-meta.xml
<CustomField>
    <fullName>Include_CMS1500_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include CMS1500 Form</label>
    <type>Checkbox</type>
</CustomField>