force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Include_UB04_Form__c.field-meta.xml
<CustomField>
    <fullName>Include_UB04_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include UB04 Form</label>
    <type>Checkbox</type>
</CustomField>