force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Inpatient__c.field-meta.xml
<CustomField>
    <fullName>Inpatient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inpatient</label>
    <type>Checkbox</type>
</CustomField>