force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Inventory_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Order_Type__c</fullName>
    <label>Inventory Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>