force-app/main/default/objects/Elixir_Custom_Setting__c/fields/IsLeadTriggerExecution__c.field-meta.xml
<CustomField>
    <fullName>IsLeadTriggerExecution__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsLeadTriggerExecution</label>
    <type>Checkbox</type>
</CustomField>