force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Lab_Order__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lab Order</label>
    <type>Checkbox</type>
</CustomField>