force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Lab_Order_Billing_On_Status__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Billing_On_Status__c</fullName>
    <defaultValue>&apos;Final Order&apos;</defaultValue>
    <label>Lab Order Billing On Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>