force-app/main/default/objects/Elixir_Custom_Setting__c/fields/LabOrder_Columns__c.field-meta.xml
<CustomField>
    <fullName>LabOrder_Columns__c</fullName>
    <description>This text contains semi-colon seperated columns names. These columns are shown in manual lab order list view.</description>
    <label>LabOrder Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>