force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Lock_forms_on_closure_of_a_care_episode__c.field-meta.xml
<CustomField>
    <fullName>Lock_forms_on_closure_of_a_care_episode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock forms on closure of a care episode</label>
    <type>Checkbox</type>
</CustomField>