force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Medication_Columns__c.field-meta.xml
<CustomField>
    <fullName>Medication_Columns__c</fullName>
    <description>This field is used to store the selected columns from the &quot;Manage Columns&quot; of the medications in the Notes.</description>
    <label>Medication Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>