force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Medication_Data_Limit_On_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medication_Data_Limit_On_Notes__c</fullName>
    <description>This field is utilized to set a limit to display the number of medication records on the Medication list view of forms.</description>
    <inlineHelpText>Enter values such as LIMIT 10.</inlineHelpText>
    <label>Medication Data Limit On Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>