force-app/main/default/objects/Elixir_Custom_Setting__c/fields/NewPresColumn__c.field-meta.xml
<CustomField>
    <fullName>NewPresColumn__c</fullName>
    <label>NewPresColumn</label>
    <type>TextArea</type>
</CustomField>