force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Notification_for_manual_lab__c.field-meta.xml
<CustomField>
    <fullName>Notification_for_manual_lab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification for manual lab</label>
    <type>Checkbox</type>
</CustomField>