force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Notification_for_New_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Notification_for_New_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification for New Appointment</label>
    <type>Checkbox</type>
</CustomField>