force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Notification_for_New_Form__c.field-meta.xml
<CustomField>
    <fullName>Notification_for_New_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification for New Form</label>
    <type>Checkbox</type>
</CustomField>