force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Notification_for_visit_summaries__c.field-meta.xml
<CustomField>
    <fullName>Notification_for_visit_summaries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification for visit summaries</label>
    <type>Checkbox</type>
</CustomField>