force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Notifications_for_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Notifications_for_Appointment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will enables the  provider to send out direct messages to the patient for new appointments or any changes in existing appointment automatically so that my patients are able to get the important information in their inbox</description>
    <label>Notifications for Appointment</label>
    <type>Checkbox</type>
</CustomField>