force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Notifications_for_eLab__c.field-meta.xml
<CustomField>
    <fullName>Notifications_for_eLab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notifications for eLab</label>
    <type>Checkbox</type>
</CustomField>