force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Notifications_for_Form__c.field-meta.xml
<CustomField>
    <fullName>Notifications_for_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notifications for Form</label>
    <type>Checkbox</type>
</CustomField>