force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Opportunity_stage_update__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_stage_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity stage update</label>
    <type>Checkbox</type>
    
</CustomField>