force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Organization_base_URL__c.field-meta.xml
<CustomField>
    <fullName>Organization_base_URL__c</fullName>
    <label>Organization base URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>