force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Outpatient__c.field-meta.xml
<CustomField>
    <fullName>Outpatient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outpatient</label>
    <type>Checkbox</type>
</CustomField>