force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Patient_Account_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Patient_Account_Recordtype__c</fullName>
    <defaultValue>&apos;Patient_Account&apos;</defaultValue>
    <description>To define project level patient account recordtype.</description>
    <label>Patient Account Recordtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>