force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Patient_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Patient_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Deceased</label>
    <type>Checkbox</type>
</CustomField>