force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Patient_Mode_For_Forms__c.field-meta.xml
<CustomField>
    <fullName>Patient_Mode_For_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>show patient mode checkbox on forms depending on this value</description>
    <label>Patient Mode For Forms</label>
    <type>Checkbox</type>
</CustomField>