force-app/main/default/objects/Elixir_Custom_Setting__c/fields/PatientGroupMaxValidationBreak__c.field-meta.xml
<CustomField>
    <fullName>PatientGroupMaxValidationBreak__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PatientGroupMaxValidationBreak</label>
    <type>Checkbox</type>
</CustomField>