force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Payment_reminder_interval__c.field-meta.xml
<CustomField>
    <fullName>Payment_reminder_interval__c</fullName>
    <label>Payment reminder interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>