force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Practitioner_Contact_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Contact_Recordtype__c</fullName>
    <defaultValue>&apos;Practitioner&apos;</defaultValue>
    <description>This will be used to store recordtypes which will be used for Practitioners.</description>
    <label>Practitioner Contact Recordtypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>