force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Prescription_Columns__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Columns__c</fullName>
    <label>Prescription Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>