force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Prescriptions__c.field-meta.xml
<CustomField>
    <fullName>Prescriptions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prescriptions</label>
    <type>Checkbox</type>
</CustomField>