force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Problem_Column__c.field-meta.xml
<CustomField>
    <fullName>Problem_Column__c</fullName>
    <label>Problem Column</label>
    <type>TextArea</type>
</CustomField>