force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Problem_List__c.field-meta.xml
<CustomField>
    <fullName>Problem_List__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Problem List</label>
    <type>Checkbox</type>
</CustomField>