force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedure Code</label>
    <type>Checkbox</type>
</CustomField>