force-app/main/default/objects/Elixir_Custom_Setting__c/fields/ProductMRNGenertaorExtensionClassName__c.field-meta.xml
<CustomField>
    <fullName>ProductMRNGenertaorExtensionClassName__c</fullName>
    <label>Enable Auto MRN Generation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>