force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Record_Type_for_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_for_Conversion__c</fullName>
    <label>Record Type for Lead Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>