force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Referral_Column__c.field-meta.xml
<CustomField>
    <fullName>Referral_Column__c</fullName>
    <label>Referral Column</label>
    <type>TextArea</type>
</CustomField>