force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Reservation_Columns__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Columns__c</fullName>
    <description>This contains the Columns to exclude in the Reservation screen</description>
    <inlineHelpText>Please mention columns to exclude as: BUILDINGS,SUITES,ROOMS,BEDS,FEATURES</inlineHelpText>
    <label>Reservation Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>