force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Send_Claim_To_ClaimMd__c.field-meta.xml
<CustomField>
    <fullName>Send_Claim_To_ClaimMd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Claim To ClaimMd</label>
    <type>Checkbox</type>
</CustomField>