force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>