force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Square_Payment__c.field-meta.xml
<CustomField>
    <fullName>Square_Payment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the custom setting is enabled, then on clicking &apos;Collect Payment&apos; button the new payment screen should open up.</description>
    <label>Square Payment</label>
    <type>Checkbox</type>
</CustomField>