force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Template_Specific_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Template_Specific_Diagnosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Specific Diagnosis</label>
    <type>Checkbox</type>
</CustomField>