force-app/main/default/objects/Elixir_Custom_Setting__c/fields/UR_Alert_when_usable_session_count_below__c.field-meta.xml
<CustomField>
    <fullName>UR_Alert_when_usable_session_count_below__c</fullName>
    <label>UR Alert when usable session count below</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>