force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Vital_Sign_Columns__c.field-meta.xml
<CustomField>
    <fullName>Vital_Sign_Columns__c</fullName>
    <description>To configure the Vital sign columns in the forms</description>
    <label>Vital Sign Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>