force-app/main/default/objects/Elixir_Custom_Setting__c/fields/Vital_Signs__c.field-meta.xml
<CustomField>
    <fullName>Vital_Signs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vital Signs</label>
    <type>Checkbox</type>
</CustomField>